Reorganize file structure
1) Set QML_IMPORT_PATH so that Qt Creator could understand the package
2) Include qml-explorer.qri will bundle everything into your application
3) `import Explorer 1.0` works

--- a/qml-explorer.qrc
+++ b/qml-explorer.qrc
@@ -1,6 +1,6 @@
-
 <RCC>
-    <qresource prefix="/qml-explorer">
-        <file>qmldir</file>
+    <qresource prefix="/qt-project.org/imports/">
+        <file>Explorer/Explorer.qml</file>
+        <file>Explorer/qmldir</file>
     </qresource>
 </RCC>
